# tcc_boxOffice

./: .flake8  .gitignore  README.md  pyproject.toml
app/: database.py  main.py
app/api/: consult.py  consult_class.py  consult_omdb.py  consult_tmdb.py
app/api/classes/: consult_class.py
app/api/schema/: omdb_schema.py  schema.py  tmdb_schema.py
app/db/: db.py
app/db/models/: db_model.py
app/db/schema/: db_schema.py
app/pipeline/: extract.py  load.py  transform.py
app/pre_processing/: main.py  process.py  transform.py
data/input/: All Time Worldwide Box Office (filter).csv  All Time Worldwide Box Office (filter).xlsx  BoxOfficeCollections (filter).csv  Box_Office DataBase(filter).csv  Box_Office DataBase(tmdb_complete)(omdb_pt1).csv  Box_Office DataBase(tmdb_complete)(omdb_pt2).csv  Box_Office DataBase(tmdb_complete)(omdb_pt3).csv  Box_Office DataBase(tmdb_complete).csv  Box_Office DataBase.csv  DataBase (ID,Name).csv  top-500-movies (filter).csv
data/input/Backup/: Box_Office DataBase(complete_nulls).csv  Box_Office DataBase(not_filtered).csv  Box_Office DataBase(null_rows).csv  Box_Office DataBase.csv  top-500-movies (filter).csv
data/input/Original DataBases/: All Time Worldwide Box Office (filter).csv  tmdb_5000_movies (filter).csv  tmdb_5000_movies - Copia.csv  tmdb_5000_movies(filter).csv  top-500-movies.csv
